--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -144,35 +144,33 @@ main {
   align-items: flex-start;
   justify-content: flex-start;
   gap: 2px;
-  transition: all 0.3s ease-in-out;
+  transition: all 0.2s ease-in-out;
   position: relative;
 
   .arrow-ic {
     position: relative;
     z-index: 2;
+    transition: all 0.2s ease-in-out;
+    transform-style: preserve-3d;
+    transform-origin: 50% 50%;
+    &:first-child {
+      transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+    }
+    &:last-child {
+      margin-right: 0;
+      transform: translate3d(0px, 0px, 0px) scale3d(0, 0, 1);
+    }
   }
 
-  &::before {
-    position: absolute;
-    top: 0;
-    right: 30px;
-    bottom: 0;
-    width: 20px;
-    background: $black;
-    transition: all 0.3s ease-in-out;
-    z-index: 1;
-    border-radius: 50%;
-    display: inline-block;
-    content: '';
-  }
+
 
   p {
     position: relative;
     z-index: 2;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.2s ease-in-out;
     border-radius: 20px;
     height: 50px;
-    display: flex;
+    display: inline-flex;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -189,16 +187,24 @@ main {
   }
 
   &:hover {
-    &::before {
-      width: 100%;
-      right: 0;
-      border-radius: 20px;
+    p {
+      margin-left: -50px;
+    }
+    .arrow-ic {
+      &:last-child {
+        margin-right: 50px;
+        transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1);
+      }
+      &:first-child {
+        transform: translate3d(0px, 0px, 0px) scale3d(0, 0, 1);
+      }
     }
   }
 
   &.btn--green {
     p {
       background: $main-color;
+
     }
 
     &:hover {
@@ -326,7 +332,7 @@ main {
           text-transform: uppercase;
           transition: all 0.3s ease-in-out;
 
-          &.active {
+          &.active, &:hover {
             color: $main-color;
           }
         }
@@ -577,6 +583,10 @@ main {
       font-style: normal;
       @include font-500;
       line-height: 150%;
+      margin-bottom: 30px;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
@@ -1176,6 +1186,7 @@ main {
     &:nth-child(1) {
       grid-area: 2 / 1 / 4/ 2;
       .single-news__wrap {
+        transform: translate(0, -800px);
         &::before, &::after {
           content: '';
         }
@@ -1185,6 +1196,7 @@ main {
     &:nth-child(2) {
       grid-area: 1 / 2 / 3/ 3;
       .single-news__wrap {
+        transform: translate(0, 800px);
         &::before {
           content: '';
         }
@@ -1193,7 +1205,9 @@ main {
 
     &:nth-child(3) {
       grid-area: 3 / 2 / 5/ 3;
+
       .single-news__wrap {
+        transform: translate(0, 800px);
         &::after {
           content: '';
         }
@@ -1386,12 +1400,516 @@ main {
       width: 100%;
       height: 100%;
       transition: all 0.3s ease-in-out;
-      filter: brightness(10);
+      filter: brightness(2);
     }
     &:hover {
       img {
         filter: brightness(1);
       }
+    }
+  }
+}
+
+.laser-hero {
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  gap: 20px;
+}
+.laser-left {
+  width: calc(50% - 40px);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  span {
+    color: #555;
+    font-size: 14px;
+    font-style: normal;
+    @include font-500;
+    line-height: 150%;
+    display: inline-block;
+    margin-bottom: 100px;
+  }
+}
+.laser-right {
+  width: calc(50% - 90px);
+  margin-top: -30px;
+
+}
+.laser-image {
+  width: 100%;
+  position: relative;
+  height: 0;
+  padding-top: 133%;
+  &::after {
+    width: 66%;
+    padding-top: 66%;
+    display: inline-block;
+    content: '';
+    background: url("../img/laserflower.svg") no-repeat center / 100%;
+    position: absolute;
+    z-index: 2;
+    bottom: -1%;
+    left: -19%;
+  }
+  .laser2 {
+    border-radius: 50px;
+    width: 28%;
+    height: 0;
+    padding-top: 28%;
+    display: inline-block;
+    overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      top: 0;
+      left: 0;
+      position: absolute;
+    }
+  }
+  .laser3 {
+    border-radius: 50px;
+    width: 44%;
+    height: 0;
+    padding-top: 44%;
+    display: inline-block;
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    right: calc(100% + 24px);
+    transform: translate(0, -50%);
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      top: 0;
+      left: 0;
+      position: absolute;
+    }
+  }
+  .laser1 {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    z-index: 1;
+    mask-image: url("../img/lasermask.svg");
+    mask-size: 100% 100%;
+    mask-position: 0 0 ;
+    img {
+      width: 100%;
+      object-fit: cover;
+    }
+  }
+}
+.hero-laser {
+  position: relative;
+  &::before {
+    z-index: 1;
+    height: 1px;
+    width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    background: #E7E7E7;
+    display: inline-block;
+    content: '';
+  }
+  .container {
+    position: relative;
+    z-index: 2;
+  }
+}
+.advantages {
+  width: 100%;
+  .title-head {
+    margin-top: -270px;
+    width: calc(50% - 40px);
+    gap: 105px;
+    flex-direction: column;
+    .text {
+      width: 100%;
+    }
+  }
+}
+
+.advantages-list {
+  width: 100%;
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  gap: 30px 40px;
+  margin-top: 78px;
+}
+.single-advantage {
+  width: calc((100% / 3) - (80px / 3));
+
+  border-radius: 50px;
+  border: 1px solid #000;
+  background: #FFF;
+  padding: 57px 42px 35px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  position: relative;
+  .img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    border-radius: 50px;
+    background: $main-color;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+  span {
+    display: inline-flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 5px;
+
+    color: #000;
+
+    font-size: 36px;
+    font-style: normal;
+    @include font-700;
+    margin-bottom: 28px;
+    line-height: 120%;
+    text-transform: uppercase;
+    position: relative;
+    &::after {
+      flex-shrink: 0;
+      width: 73px;
+      height: 72px;
+      display: inline-block;
+      content: none;
+      background: url("../img/hashlaser.svg") no-repeat center / 100%;
+    }
+  }
+  &:nth-child(5) {
+    border: none;
+  }
+  &:nth-child(even), &:last-child {
+    span {
+      &::after {
+        content: '';
+      }
+    }
+  }
+  p {
+    color: #555;
+
+    font-size: 14px;
+    font-style: normal;
+    @include font-500;
+    line-height: 150%;
+    margin-top: auto;
+  }
+}
+
+.apparatus {
+  width: 100%;
+  padding-top: 90px;
+}
+
+.apparatus-cont {
+  width: 100%;
+}
+
+.apparatus-image {
+  width: 100%;
+  height: 0;
+  padding-top: 46.8%;
+  position: relative;
+
+  .sub-title {
+    position: absolute;
+    z-index: 2;
+    top: 75px;
+    left: 0;
+    transform: translate(0, -50%);
+  }
+  .txt {
+    bottom: 75px;
+    left: 0;
+    width: 48%;
+    position: absolute;
+    z-index: 2;
+    transform: translate(0, 50%);
+    p {
+      color: #555;
+
+      font-size: 14px;
+      font-style: normal;
+      @include font-500;
+      line-height: 150%;
+    }
+  }
+  .img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    mask-image: url("../img/aparatmask.svg");
+    mask-size: 100% 100%;
+    mask-position: 0 0;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+}
+
+.apparatus-list {
+  width: 100%;
+  margin-top: 87px;
+  gap: 60px 40px;
+  display: flex;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+}
+
+.single-apparatus {
+  width: calc((100% / 3) - (80px / 3));
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  gap: 16px;
+
+  .img {
+    width: 115px;
+    height: 110px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    flex-shrink: 0;
+    &::after {
+      display: inline-block;
+      content: '';
+      width: 75px;
+      height: 75px;
+      position: absolute;
+      top: 100%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-image: var(--number);
+      background-position:  center;
+      background-repeat: no-repeat;
+      background-size: auto;
+    }
+    img {
+      height: 100%;
+      width: auto;
+      mask-image: var(--mask);
+      mask-position: 0 0;
+      mask-size: 100% 100%;
+    }
+  }
+  .txt {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    span {
+      display: inline-block;
+      margin-bottom: 36px;
+
+      color: #000;
+      font-size: 24px;
+      font-style: normal;
+      @include font-700;
+      line-height: 150%;
+      text-transform: uppercase;
+    }
+    p {
+      color: #555;
+      font-size: 14px;
+      font-style: normal;
+      @include font-500;
+      line-height: 150%;
+    }
+  }
+}
+
+.test-drive-block {
+  width: 100%;
+  margin: 60px 0;
+  .test-drive {
+    transform: none;
+    margin: 0;
+    .img {
+      display: none;
+    }
+  }
+}
+
+.our-steps {
+  margin-top: 70px;
+  width: 100%;
+}
+.steps-cont {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: flex-start;
+  margin-bottom: 110px;
+  &:last-child {
+    margin-bottom: 0;
+  }
+  .title-head {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    .sub-title {
+      margin-right: 38px;
+    }
+    .text {
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: flex-start;
+      justify-content: space-between;
+      gap: 40px;
+      span, p {
+        width: calc(50% - 20px);
+        margin: 0;
+      }
+
+    }
+  }
+}
+
+.steps-list {
+  width: 100%;
+  padding-top: 75px;
+  display: flex;
+  gap: 40px;
+  position: relative;
+  align-items: stretch;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+
+  &::before {
+    display: inline-block;
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 45%;
+    width: 37%;
+    padding-top: 31.9%;
+    background: url("../img/stepbg.svg") no-repeat center / 100%;
+  }
+
+}
+
+.steps-cont {
+  .title-head {
+    .btn {
+      margin-right: 30%;
+    }
+  }
+  .steps-img {
+    height: auto;
+    width: 40%;
+    margin-left: auto;
+    margin-top: -10%;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+  &.second-step {
+    .title-head {
+      .text {
+        width: calc(50% - 20px);
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        gap: 55px;
+        span, p {
+          width: 100%;
+        }
+      }
+
+    }
+  }
+}
+.single-step {
+  width: calc((100% / 3) - (80px / 3));
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column;
+  position: relative;
+  z-index: 2;
+
+  .img {
+    width: 100%;
+    height: 0;
+    padding-top: 64.4%;
+    position: relative;
+    border-radius: 50px;
+    margin-bottom: 45px;
+    overflow: hidden;
+    img {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
+      object-fit: cover;
+    }
+  }
+  .text {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    span {
+      display: inline-block;
+      margin-bottom: 36px;
+
+      color: #000;
+      font-size: 24px;
+      font-style: normal;
+      @include font-700;
+      line-height: 150%;
+      text-transform: uppercase;
+    }
+    p {
+      color: #555;
+      font-size: 14px;
+      font-style: normal;
+      @include font-500;
+      line-height: 150%;
     }
   }
 }
