--- a/app/scss/_media.scss
+++ b/app/scss/_media.scss
@@ -174,6 +174,15 @@
 }
 
 @media screen and (max-width: 1450px) {
+  .news-cont .single-news:nth-child(1) .single-news__wrap {
+    transform: translate(0, -860px);
+  }
+  .news-cont .single-news:nth-child(2) .single-news__wrap {
+    transform: translate(0, 860px);
+  }
+  .news-cont .single-news:nth-child(3) .single-news__wrap {
+    transform: translate(0, 860px);
+  }
   .container {
     max-width: 1260px;
   }
@@ -345,8 +354,10 @@
   }
   .news-cont .single-news {
     width: calc(100% / 3);
+    transform: none !important;
 
     .single-news__wrap {
+      transform: none !important;
 
 
       &::before {
