--- a/app/scss/_home.scss
+++ b/app/scss/_home.scss
@@ -349,7 +349,7 @@ main {
           }
 
           &.active {
-            background: url("../img/hero-bg.svg") no-repeat center / 100% 100%;
+            background: url("../img/hero-text2.png") no-repeat center / 100% 100%;
           }
         }
 
@@ -424,7 +424,7 @@ main {
 .hero-text {
   width: auto;
   padding: 29px 64px 29px 34px;
-  background: url("../img/hero-bg.svg") no-repeat center / contain;
+  background: url("../img/hero-text2.png") no-repeat center / 100% 100%;
 
   p {
     font-family: $second-font;
@@ -776,7 +776,8 @@ main {
     border-radius: 50px;
     overflow: hidden;
     position: absolute;
-
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
     &.have-flower {
       &::before {
         width: 104%;
@@ -853,7 +854,7 @@ main {
   width: 100%;
   position: relative;
   z-index: 2;
-  background: url("../img/test-bg.svg") no-repeat center / 100% 100%;
+  background: url("../img/test-bg2.png") no-repeat center / 100% 100%;
   padding: 68px 128px 68px;
   margin-top: -100px;
 
@@ -1081,8 +1082,11 @@ main {
     height: 0;
     position: relative;
     padding-top: 70.7%;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
 
     img {
+      border-radius: 50px;
       position: absolute;
       top: 0;
       left: 0;
@@ -1193,6 +1197,8 @@ main {
   grid-template-rows: repeat(4, 195px);
 
   .single-news {
+    will-change: transform;
+    transition: all 0.1s linear;
 
     .single-news__wrap {
       position: relative;
@@ -1221,7 +1227,7 @@ main {
       grid-area: 2 / 1 / 4/ 2;
 
       .single-news__wrap {
-        transform: translate(0, -570px);
+        transform: translate(0, -370px);
 
         &::before, &::after {
           content: '';
@@ -1232,7 +1238,7 @@ main {
       grid-area: 1 / 2 / 3/ 3;
 
       .single-news__wrap {
-        transform: translate(0, 600px);
+        transform: translate(0, 320px);
 
         &::before {
           content: '';
@@ -1244,7 +1250,7 @@ main {
       grid-area: 3 / 2 / 5/ 3;
 
       .single-news__wrap {
-        transform: translate(0, 600px);
+        transform: translate(0, 320px);
 
         &::after {
           content: '';
@@ -1525,7 +1531,8 @@ main {
     position: absolute;
     top: 0;
     left: 0;
-
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -1546,8 +1553,8 @@ main {
     position: absolute;
     top: 50%;
     right: calc(100% + 24px);
-    transform: translate(0, -50%);
-
+    transform: translate3d(0, 0, 0) translate(0, -50%);
+    backface-visibility: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -1970,7 +1977,8 @@ main {
     border-radius: 50px;
     margin-bottom: 45px;
     overflow: hidden;
-
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -2045,6 +2053,7 @@ main {
   img {
     height: 100%;
     width: auto;
+
   }
 }
 
@@ -2204,7 +2213,7 @@ main {
       margin: 0 0 20px;
       width: 100%;
       padding: 29px 64px 29px 34px;
-      background: url("../img/hero-bg.svg") no-repeat center / 100% 100%;
+      background: url("../img/hero-text2.png") no-repeat center / 100% 100%;
 
 
       font-family: $second-font;
@@ -2376,11 +2385,19 @@ body {
   }
 }
 
+.insta-list {
+  .swiper-slide {
+    overflow: hidden;
+  }
+}
+
 .single-insta {
   width: calc((100% / 8) - ((18px * 7) / 8));
   border-radius: 15px;
   border: 1px solid #000;
   overflow: hidden;
+  backface-visibility: hidden;
+  transform: translate3d(0, 0, 0);
 
   a {
     width: 100%;
@@ -2388,6 +2405,8 @@ body {
     padding-top: 157%;
     display: flex;
     position: relative;
+    overflow: hidden;
+    border-radius: 15px;
 
     p {
       top: 100%;
@@ -2422,6 +2441,8 @@ body {
       top: 0;
       left: 0;
       transform: scale(1);
+      border-radius: 15px;
+      overflow: hidden;
       transition: all 0.3s cubic-bezier(1, .51, 0, 1.04);
     }
   }
@@ -2905,6 +2926,8 @@ body {
     height: 0;
     padding-top: 131%;
     overflow: hidden;
+    backface-visibility: hidden;
+    transform: translate3d(0, 0, 0);
 
     img {
       width: 100%;
@@ -2983,7 +3006,7 @@ body {
 .clack-img {
   width: auto;
   padding: 29px 64px 29px 34px;
-  background: url("../img/hero-bg.svg") no-repeat center / contain;
+  background: url("../img/hero-text2.png") no-repeat center / contain;
 
   p {
     font-family: $second-font;
@@ -3342,7 +3365,8 @@ body {
     padding-top: 19.8%;
     right: 17.3%;
     top: -26.8%;
-
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -3363,7 +3387,8 @@ body {
     padding-top: 9.7%;
     right: 0;
     top: -26.8%;
-
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
     img {
       width: 100%;
       height: 100%;
@@ -3474,6 +3499,8 @@ body {
   position: relative;
   padding-top: 117%;
   margin-top: auto;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
 
   .arrow {
     width: 39%;
@@ -3518,11 +3545,26 @@ body {
     left: 0;
     z-index: 1;
 
+
+
     img {
       width: 100%;
       height: 100%;
       object-fit: cover;
+      animation: movingImg 20s linear infinite;
     }
+  }
+}
+
+@keyframes movingImg {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.3);
+  }
+  100% {
+    transform: scale(1);
   }
 }
 
@@ -3707,6 +3749,7 @@ body {
     padding-top: 111%;
     margin-bottom: 25px;
 
+
     &::after {
       width: 58%;
       padding-top: 58%;
@@ -3726,7 +3769,8 @@ body {
       top: 0;
       left: 0;
       overflow: hidden;
-
+      transform: translate3d(0, 0, 0);
+      backface-visibility: hidden;
       img {
         width: 100%;
         height: 100%;
@@ -3745,7 +3789,7 @@ body {
   }
 
   &::after {
-    z-index: 1;
+    z-index: 0;
     height: 1px;
     width: 100%;
     position: absolute;
@@ -3782,7 +3826,8 @@ body {
     position: absolute;
     height: 0;
     bottom: 0;
-
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
     &:nth-child(1) {
       width: 39%;
       padding-top: 39%;
@@ -3812,7 +3857,8 @@ body {
   border-radius: 50px;
   background: $main-color;
   overflow: hidden;
-
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
   img {
     width: 100%;
     height: 100%;
@@ -3870,7 +3916,7 @@ body {
       position: absolute;
       top: 0;
       left: 0;
-      background: url("../img/hero-bg.svg") no-repeat center / 100% 100%;
+      background: url("../img/hero-text2.png") no-repeat center / 100% 100%;
       opacity: 0;
       transition: all 0.3s ease-in-out;
     }
@@ -3979,7 +4025,8 @@ body {
   overflow: hidden;
   border-radius: 50px;
   flex-shrink: 0;
-
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
   iframe {
     width: 100%;
     height: 100%;
@@ -4213,6 +4260,9 @@ body {
 
   &.shw {
     display: flex;
+    .single-work__right {
+
+    }
   }
 }
 
@@ -4226,8 +4276,7 @@ body {
   justify-content: center;
   gap: 30px;
   background: url("../img/pathworkr.png") no-repeat center / 100% 100%;
-  position: sticky;
-  top: var(--line);
+
 }
 
 .single-work__left {
@@ -4448,6 +4497,8 @@ body {
     position: relative;
     border-radius: 50px;
     overflow: hidden;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
 
     img {
       width: 100%;
@@ -4845,11 +4896,7 @@ body {
           margin-left: 40px;
         }
 
-        a {
-          &:hover {
-            color: $main-color;
-          }
-        }
+
 
         &.current {
           color: $main-color;
@@ -4868,6 +4915,11 @@ body {
             content: '';
             background: url("../img/pagbef.svg") no-repeat center / contain;
           }
+        }
+      }
+      a {
+        &:hover {
+          color: $main-color !important;
         }
       }
     }
@@ -4917,6 +4969,8 @@ body {
     position: relative;
     overflow: hidden;
     margin-bottom: 65px;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
 
     h1 {
       padding: 30px;
@@ -4944,7 +4998,7 @@ body {
     margin: 50px 0;
     width: 100%;
     padding: 29px 64px 29px 44px;
-    background: url("../img/hero-bg.svg") no-repeat center / 100% 100%;
+    background: url("../img/hero-text2.png") no-repeat center / 100% 100%;
 
 
     font-family: $second-font;
@@ -5147,7 +5201,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: url(../img/hero-bg.svg) no-repeat center/100% 100%;
+    background: url(../img/hero-text2.png) no-repeat center/100% 100%;
     filter: brightness(0) invert(1);
 
   }
@@ -5214,17 +5268,18 @@ body {
 .modal-close {
   width: 45px;
   height: 45px;
-  background: url("../img/hero-bg.svg") no-repeat center / 100% 100%;
+  background: url("../img/hero-text2.png") no-repeat center / 100% 100%;
   position: absolute;
   right: -60px;
   top: -30px;
   transform: rotate(-180deg);
+  cursor: pointer;
 
   span {
     height: 4px;
     width: 33px;
     display: inline-block;
-    background: url(../img/test-bg.svg) no-repeat center/100% 100%;
+    background: url(../img/test-bg2.png) no-repeat center/100% 100%;
     filter: brightness(0);
     position: absolute;
     left: 50%;
