--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,5 +1,5 @@
 @import "fonts";
-//@import "animations";
+@import "animations";
 
 $main-font: 'Museo Sans Cyrl', sans-serif;
 $second-font: 'Bad Script', cursive;
